# Discover

./: .ninja_log  CMakeCache.txt  CMakeLists.txt  Discover.aps  Discover.rc  DiscoverMainWindow.cpp  DiscoverMainWindow.h  GPXExporter.cpp  GPXExporter.h  Images.qrc  InputHandler.cpp  InputHandler.h  Main.qml  MapBackend.cpp  MapBackend.h  MapMarkerBase.qml  MapMarkerItem.cpp  MapMarkerItem.h  MapMarkerItem2.cpp  MapMarkerItem2.h  MapMarkerList.cpp  MapMarkerList.h  MapMarkerModel.cpp  MapMarkerModel.h  MapMarkerModel2.cpp  MapMarkerModel2.h  MapMarkerMultiDelegate.qml  MapView.qml  Track.cpp  Track.h  Track2.cpp  Track2.h  TracksManager.cpp  TracksManager.h  VecGeoCoord2D.cpp  build.ninja  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+2 more)
.cmake/api/v1/reply/: cache-v2-e4fb77ff78309e395261.json  codemodel-v2-5fd04cfd586b689697a8.json  target-Discover-MinSizeRel-b21018248557dcf08fbd.json  target-Discover_autogen-MinSizeRel-cb1c1bcce9c15d7c344e.json  target-Discover_autogen_timestamp_deps-MinSizeRel-fc5c7523fca3e3a7f0e4.json  target-Discover_qmlimportscan-MinSizeRel-9e548288944c8ccd2e1d.json  target-Discover_qmltyperegistration-MinSizeRel-5d537ec2e466d5a0e77b.json
.cmake/api/v1/reply.prev/: cmakeFiles-v1-cbcbac41895f393123ea.json  codemodel-v2-5a6b50c4478dfa4d8d51.json  directory-.-MinSizeRel-d0920255b5c2d96ed092.json  target-Discover-MinSizeRel-3d95eb65f2d0752979f7.json  target-Discover_tooling-MinSizeRel-c6faea1cfc523226d67c.json  target-all_qmltyperegistrations-MinSizeRel-1b275838fcdf6dc66b77.json
.qt/: QtDeploySupport.cmake
.qt/deploy_qml_imports/: Discover.cmake
.qt_plugins/: Qt6_QmlPlugins_Imports_Discover.rsp
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: DiscoverMainWindow.cpp.CCFA861CA97D2943.idx  DiscoverMainWindow.h.DD499CAEE9CD5BF0.idx  GPXExporter.h.D94E2AC0E304B264.idx  InputHandler.cpp.640FC2265170E607.idx  MapHelper.cpp.ECA582B1570536B4.idx  MapMarkerList.cpp.5BFFC3691E963C56.idx  MapMarkerList.h.B216E71E532809B0.idx  MapMarkerModel.cpp.EE052E7DEF1B8DEB.idx  MapMarkerModel.h.29F0D8DDE8250911.idx  MapMarkerTreeItem.h.C4FAD9B63B8C94C5.idx  MapMarkerTreeListModel.cpp.1AD50C1229397DD9.idx  MapMarkerTreeModel.h.DF4CC03A3ACC4A58.idx  QApplication.DF1F23EC84D4BB6A.idx  QEvent.F9D82573E2970912.idx  QFileDialog.FA8C143412D5830D.idx  QGeoAddress.6D66C958F20729C4.idx  QGeoLocation.6CDB6FBCB430FCEC.idx  QMargins.21D3D94DCBDCB7EA.idx  QMetaType.FFA4BD2540601B86.idx  QQuickStyle.F5D6E58D7ED7ECEF.idx  QQuickView.C45529AD22677983.idx  QRect.0392EAB2539CA93C.idx  QRectF.BD006EE6DF69B66D.idx  QSize.5636A3F08DCC1A3C.idx  QSizeF.4A06B021066297DE.idx  QString.5E1C755F4706567F.idx  QTransform.7B4D1A7B1CDD695E.idx  QVector2D.68E936D1DD74D51A.idx  QXmlStreamWriter.04A89BC98902D021.idx  Track.cpp.179B0DC60FD6800C.idx  TracksManager.h.50FFD95FB3F0EB0D.idx  TreeTrack.cpp.DDBD9011FAB640D3.idx  VecGeoCoord2D.cpp.CCB37235EAA5FB62.idx  VecGeoCoord2D.h.084A8CE4FB7FA376.idx  VisitorReturnEnum.h.F475D8938B362281.idx  allocator.h.F253FDFD96875935.idx  basic_string.h.42228EDB0F57990C.idx  cmath.6E7FC928002ADF0E.idx  codecvt.h.485D52DAD024E8E4.idx  ctime.2F70D43D577ACF69.idx  (+137 more)
.rcc/: images.qrc  qmake_Discover.qrc  qrc_Discover_raw_qml_0.cpp  qrc_qmake_Discover.cpp  qrc_qml.cpp  settings.qrc
.rcc/qmlcache/: Discover_qmlcache_loader.cpp
.rcc/qmlcache/Discover_Qml/: CheckboxColumnItem_qml.cpp  MapMarkerBase_qml.cpp  MapMarkerCursor_qml.cpp  MapMarkerTreeViewDelegate_qml.cpp  MapRouteBase_qml.cpp
Deployed_versions/Discover_v1.0.0/: .ninja_deps  cmake_install.cmake  discover_qmltyperegistrations.cpp
Deployed_versions/Discover_v1.0.0/.qt_plugins/: Qt6_QmlPlugins_Imports_Discover.cmake
Deployed_versions/Discover_v1.0.0/.rcc/: Discover_raw_qml_0.qrc  qml.qrc  qrc_images.cpp  qrc_settings.cpp
Deployed_versions/Discover_v1.0.0/.rcc/qmlcache/: Discover_qml_loader_file_list.rsp
Deployed_versions/Discover_v1.0.0/Discover/: Discover.qmltypes
Deployed_versions/Discover_v1.0.0/Discover/Qml/: CheckboxColumnItem.qml  DiscoverMapView.qml  MapMarkerBase.qml  MapMarkerCursor.qml  MapMarkerTreeViewDelegate.qml  (+3 more)
Deployed_versions/Discover_v1.0.0/Discover_autogen/: deps  mocs_compilation.cpp
Deployed_versions/Discover_v1.0.0/meta_types/: Discover_json_file_list.txt
Deployed_versions/Discover_v1.0.0/translations/: qt_ca.qm  qt_de.qm  qt_hu.qm  qt_pl.qm
Discover/: Discover_qml_module_dir_map.qrc  qml.qrc  qmldir
Discover/Qml/: CircleMarkerShape.qml  MainWindow.qml  MapRouteBase.qml  MarkerIsActiveColumnItem.qml
Discover_autogen/: moc_predefs.h
Discover_autogen/EWIEGA46WW/: moc_DiscoverMainWindow.cpp  moc_InputHandler.cpp.d  moc_InputHandler.cpp.json
Discover_autogen/KIZUE4XIKS/: moc_TracksManager.cpp  moc_TracksManager.cpp.json  moc_TreeTrack.cpp.d
Discover_autogen/UZO2ZRKH2R/: moc_MapBackend.cpp  moc_MapBackend.cpp.d  moc_MapBackend.cpp.json  moc_MapHelper.cpp.d  moc_MapHelper.cpp.json
Discover_autogen/VIJXDZWUSY/: moc_MapMarkerTreeListModel.cpp  moc_MapMarkerTreeListModel.cpp.json  moc_MapMarkerTreeModel.cpp
Map/: MapBackend.cpp  MapBackend.h  MapHelper.cpp  MapHelper.h  VecGeoCoord2D.cpp  VecGeoCoord2D.h
Map/MapMarkers/: MapMarkerItem.cpp  MapMarkerItem.h  MapMarkerList.cpp  MapMarkerList.h  MapMarkerModel.cpp  MapMarkerModel.h  MapMarkerTreeItem.cpp  MapMarkerTreeItem.h  MapMarkerTreeListModel.cpp  MapMarkerTreeListModel.h  MapMarkerTreeModel.cpp  MapMarkerTreeModel.h  VisitorReturnEnum.h
Qml/: CheckboxColumnItem.qml  CircleMarkerShape.qml  CursorMarkerShape.qml  DiscoverMapView.qml  HelpWindow.qml  MainMenuBar.qml  MainWindow.qml  MainWindowContent.qml  MapMarkerBase.qml  MapMarkerCursor.qml  MapMarkerListViewItem.qml  MapMarkerTreeViewDelegate.qml  MapRouteBase.qml  MapView.qml  MarkerIsActiveColumnItem.qml  MarkerIsLoopColumnItem.qml  PinMarker.qml  PinMarkerShape.qml  TextColumnItem.qml
Tracks/: Track.cpp  Track.h  TracksManager.cpp  TracksManager.h  TreeTrack.cpp  TreeTrack.h
meta_types/: Discover_json_file_list.txt.timestamp  qt6discover_minsizerel_metatypes.json
qmltypes/: Discover_foreign_types.txt
translations/: qt_tr.qm
(+202 files in other folders)
